2001-11-04  Eric Blake  <ebb9@email.byu.edu>

	* src/control.h (StringBuffer_*Method): Fix some typos.
	* src/control.cpp:
	* src/expr.cpp:
	* src/symbol.cpp:
	* src/symbol.h (NumAnonymousTypes): Rename from
	num_anonymous_types, to be consistent.
	* src/ast.h: Add Ast::IsSuperAccess to complement
	IsSuperAccess. Initialize a number of fields that were never
	being assigned in the grammar.

2001-11-03  Eric Blake  <ebb9@email.byu.edu>

	* src/option.h (INVALID_SDK_ARGUMENT): Add error message.
	* src/option.cpp: Use error message, and fix stupid typo.

2001-11-02  Eric Blake  <ebb9@email.byu.edu>

	* src/ast.h: Reformat comments to 80 columns. Remove unused
	AstAssignmentExpression::DEFINITE_EQUAL.
	* src/bytecode.cpp: Reformat comments to 80 columns. Update when
	local variable table data is generated, to start when a varible is
	declared (rather than first assigned), bug 422; this also solves
	the core dump of bug 2353. Optimize boolean conditional
	expressions when one term is constant, bug 65.
	* src/definite.cpp: Remove dead code for tracking when a variable
	is first assigned, since the local variable table now only cares
	when it is declared. Patch 223.

2001-11-02  Eric Blake  <ebb9@email.byu.edu>

	* src/symbol.cpp: Reformat comments to 80 columns.
	* src/expr.cpp: Reformat comments to 80 columns. Fix one last
	corner case in TypeAccessCheck.
	* doc/jikes.1: Fix some wording to match @file behavior.

2001-11-02  Eric Blake  <ebb9@email.byu.edu>

	* src/decl.cpp: Reformat comments to 80 columns.

2001-11-02  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (TypeAccessCheck):
	* src/symbol.cpp (HasProtectedAccessTo): Update to be in line with
	JLS 6.6.1 for array types, bug 675 - patch 222.

2001-11-02  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (ConstructorAccessCheck): Fix access check for
	anonymous classes which call a default constructor in another
	package, bug 193 - patch 221.

2001-11-02  Mo DeJong  <supermo@bayarea.net>
